--- a/web/static/src/app/screens/account-settings/account-settings.html
+++ b/web/static/src/app/screens/account-settings/account-settings.html
@@ -91,52 +91,52 @@
 					</div>
 				</md-input-container>
 			</label>
-						<label class="input-container" layout="column" flex="noshrink">
-				<span>Username</span>
-				<md-input-container md-no-float>
-					<input  type="text"
-						autocomplete="off"
-						class="text-input"
-						ng-model="$ctrl.accountDetails.username"
-						name="username"
-						minlength="2"
-						maxlength="100"
-						md-maxlength="100"
-						required
-						aria-label="Application Name"
-						placeholder="username">
-					<span class="hint">Username</span>
-					<div ng-messages="$ctrl.form.api_key.$error">
-						<div ng-message="required">This is required!</div>
+						<!--<label class="input-container" layout="column" flex="noshrink">-->
+				<!--<span>Username</span>-->
+				<!--<md-input-container md-no-float>-->
+					<!--<input  type="text"-->
+						<!--autocomplete="off"-->
+						<!--class="text-input"-->
+						<!--ng-model="$ctrl.accountDetails.username"-->
+						<!--name="username"-->
+						<!--minlength="2"-->
+						<!--maxlength="100"-->
+						<!--md-maxlength="100"-->
+						<!--required-->
+						<!--aria-label="Application Name"-->
+						<!--placeholder="username">-->
+					<!--<span class="hint">Username</span>-->
+					<!--<div ng-messages="$ctrl.form.api_key.$error">-->
+						<!--<div ng-message="required">This is required!</div>-->
 
-						<div ng-message="md-maxlength">That's too long!</div>
-						<div ng-message="minlength">That's too short!</div>
-					</div>
-				</md-input-container>
-						</label>
-			<label class="input-container" layout="column" flex="noshrink">
-				<span>Password</span>
-				<md-input-container md-no-float>
-					<input  type="text"
-						autocomplete="off"
-						class="text-input"
-						ng-model="$ctrl.accountDetails.password"
-						name="password"
-						minlength="2"
-						maxlength="100"
-						md-maxlength="100"
-						required
-						aria-label="Application Name"
-						placeholder="password">
-					<span class="hint">Password</span>
-					<div ng-messages="$ctrl.form.api_key.$error">
-						<div ng-message="required">This is required!</div>
+						<!--<div ng-message="md-maxlength">That's too long!</div>-->
+						<!--<div ng-message="minlength">That's too short!</div>-->
+					<!--</div>-->
+				<!--</md-input-container>-->
+						<!--</label>-->
+			<!--<label class="input-container" layout="column" flex="noshrink">-->
+				<!--<span>Password</span>-->
+				<!--<md-input-container md-no-float>-->
+					<!--<input  type="text"-->
+						<!--autocomplete="off"-->
+						<!--class="text-input"-->
+						<!--ng-model="$ctrl.accountDetails.password"-->
+						<!--name="password"-->
+						<!--minlength="2"-->
+						<!--maxlength="100"-->
+						<!--md-maxlength="100"-->
+						<!--required-->
+						<!--aria-label="Application Name"-->
+						<!--placeholder="password">-->
+					<!--<span class="hint">Password</span>-->
+					<!--<div ng-messages="$ctrl.form.api_key.$error">-->
+						<!--<div ng-message="required">This is required!</div>-->
 
-						<div ng-message="md-maxlength">That's too long!</div>
-						<div ng-message="minlength">That's too short!</div>
-					</div>
-				</md-input-container>
-			</label>
+						<!--<div ng-message="md-maxlength">That's too long!</div>-->
+						<!--<div ng-message="minlength">That's too short!</div>-->
+					<!--</div>-->
+				<!--</md-input-container>-->
+			<!--</label>-->
 
 		</div>
 		<div layout="row" layout-align="end center">
