--- a/lib/web/static/src/app/app.html
+++ b/lib/web/static/src/app/app.html
@@ -1,5 +1,5 @@
 <div  layout="column" layout-fill>
-  <app-toolbar app-name="AZURE"  toolbar-class="layout-container"></app-toolbar>
+  <app-toolbar app-name="ServiceNow"  toolbar-class="layout-container"></app-toolbar>
   
   <md-content>
     <ui-view></ui-view>
