--- a/lib/web/templates/base.html
+++ b/lib/web/templates/base.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
-<base href="/">
+  <title>{% block title %}YellowAnt - Service Now{% endblock %}</title>
+{% block base %}{% endblock %}
 </head>
 <body>
   <main>
